--- a/package.json
+++ b/package.json
@@ -10,9 +10,6 @@
     "email": "hazdiego@gmail.com",
     "url": "github.com/diegohaz"
   },
-  "engines": {
-    "node": ">=4"
-  },
   "files": [
     "dist",
     "index.js"
@@ -25,13 +22,19 @@
     "flow": "flow check",
     "docs": "documentation readme src --section=API",
     "clean": "del dist",
-    "prebuild": "npm run clean",
+    "prebuild": "npm run docs && npm run clean",
     "build": "babel src -d dist",
+    "watch": "npm-watch",
     "patch": "npm version patch && npm publish",
     "minor": "npm version minor && npm publish",
     "major": "npm version major && npm publish",
     "prepublish": "npm run lint && npm test && npm run build",
     "postpublish": "git push origin master --follow-tags"
+  },
+  "watch": {
+    "test": "{src,test}/*.js",
+    "lint": "{src,test}/*.js",
+    "build": "src"
   },
   "jest": {
     "testRegex": "/test/.*",
@@ -46,7 +49,7 @@
     "babel-eslint": "^7.1.1",
     "babel-jest": "^18.0.0",
     "babel-plugin-transform-flow-strip-types": "^6.21.0",
-    "babel-preset-es2015": "^6.18.0",
+    "babel-preset-env": "^1.1.8",
     "babel-preset-stage-2": "^6.18.0",
     "del-cli": "^0.2.1",
     "documentation": "^4.0.0-beta.18",
@@ -57,6 +60,7 @@
     "eslint-plugin-import": "^2.2.0",
     "flow-bin": "^0.37.4",
     "jest-cli": "^18.1.0",
+    "npm-watch": "^0.1.7",
     "opn-cli": "^3.1.0"
   }
 }
