--- a/.babelrc
+++ b/.babelrc
@@ -2,7 +2,7 @@
   "presets": [
     ["env", {
       "targets": {
-        "node": 6
+        "browsers": "last 2 versions"
       }
     }],
     "stage-2"
